# svg-map

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  map-to-svg.py  package.json  pyproject.toml
.github/workflows/: pages.yml
demo/: index.html  page.js
legacy/: README.md  map-to-svg.py
scripts/: build.mjs
src/: auto.js  index.js
test/: bundles.test.js  demo.test.js  svg-map.test.js
