[tool.poetry]
name = "svg-map"
version = "0.1.0"
description = "Better HTML image maps using SVG shapes."
authors = ["Jesse Falzone <allow.hams-06@icloud.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
